cmake_minimum_required(VERSION 3.0)

PROJECT (solys-agent)



SET (PLUGIN_INTERFACE_INCLUDE_DIR	${CMAKE_CURRENT_SOURCE_DIR}/plugin-interface/inc
									${CMAKE_CURRENT_SOURCE_DIR}/plugin-interface/gen)
SET (CONFIG_PROVIDER_INCLUDE_DIR  	${CMAKE_CURRENT_SOURCE_DIR}/config-provider/inc)
SET (PLUGIN_PROVIDER_INCLUDE_DIR	${CMAKE_CURRENT_SOURCE_DIR}/plugin-provider/inc)
SET (COMMUNICATOR_INCLUDE_DIR		${CMAKE_CURRENT_SOURCE_DIR}/communicator/inc
									${CMAKE_CURRENT_SOURCE_DIR}/communicator/gen)
SET (MESSAGE_RECORDER_INCLUDE_DIR	${CMAKE_CURRENT_SOURCE_DIR}/message-recorder/inc)
SET (MEDIATOR_INCLUDE_DIR	        ${CMAKE_CURRENT_SOURCE_DIR}/target-agent-runtime/inc)
SET (LOGGER_INCLUDE_DIR         	${CMAKE_CURRENT_SOURCE_DIR}/logger/inc)

IF(NOT MSVC AND NOT ANDROID AND NOT ${CMAKE_SYSTEM_NAME} MATCHES "QNX")
    SET(ADDITIONAL_LIBRARY -lrt)
	SET(CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} -Wl,-rpath,${ORIGIN}" )
ENDIF()

IF(NOT ${CMAKE_SYSTEM_NAME} MATCHES "QNX")
	SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS}  -fPIE" )
	SET( CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS}  -fPIE -pie" )		
	SET( CMAKE_C_FLAGS  "${CMAKE_CXX_FLAGS}  -fPIE" )
else(NOT ${CMAKE_SYSTEM_NAME} MATCHES "QNX")
	SET( CMAKE_CXX_FLAGS  "-fpie" )
	SET( CMAKE_EXE_LINKER_FLAGS  "-fpie" )		
	SET( CMAKE_C_FLAGS  "-fpie" )
ENDIF()

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${ADDITIONAL_LIBRARY}")

set(CMAKE_DEBUG_POSTFIX "d" CACHE STRING "Set debug library postfix" FORCE)

if (MSVC)
    set(PROTO_BUF_INCLUDE_DIR "")
endif (MSVC)
						
INCLUDE_DIRECTORIES(
						${PROTO_BUF_INCLUDE_DIR}
						${COMMUNICATOR_INCLUDE_DIR}
						${PLUGIN_INTERFACE_INCLUDE_DIR}
						${CONFIG_PROVIDER_INCLUDE_DIR}
						${PLUGIN_PROVIDER_INCLUDE_DIR}
						${MESSAGE_RECORDER_INCLUDE_DIR}
						${LOGGER_INCLUDE_DIR}
						${MEDIATOR_INCLUDE_DIR}
						)


IF(${TA_LOCAL_ENABLE_TESTING})
	IF (CMAKE_COMPILER_IS_GNUCC)
	  SET(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} -g -O0 -Wall -fprofile-arcs -ftest-coverage")
	  SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -g -O0 -Wall -fprofile-arcs -ftest-coverage")
	  SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fprofile-arcs -ftest-coverage -lgcov")
	ENDIF()
	INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIR} ${GMOCK_INCLUDE_DIR})
ENDIF()

SET (PLUGIN_INTERFACE_LIB_PATH ${CMAKE_INSTALL_PREFIX})

if (MSVC)

    set (WCLIB "C:/Program Files (x86)/Windows Mobile 6 SDK/PocketPC/Lib/Armv4i")
    add_definitions(
        -D__ARMEL__
        -DGOOGLE_PROTOBUF_ARCH_IA32
        -DGOOGLE_PROTOBUF_NO_THREAD_SAFET
        -DGOOGLE_PROTOBUF_ARCH_ARM
    )
    
endif(MSVC)

LINK_DIRECTORIES(${PLUGIN_INTERFACE_LIB_PATH} ${WCLIB})

ADD_SUBDIRECTORY(logger)
ADD_SUBDIRECTORY(message-recorder)
ADD_SUBDIRECTORY(communicator)
ADD_SUBDIRECTORY(config-provider)
ADD_SUBDIRECTORY(plugin-provider)

SET (RACE_TARGET_AGENT_SRC target_agent_main.cpp
${CMAKE_CURRENT_SOURCE_DIR}/target-agent-runtime/src/CMediator.cpp 
							
							
							)
ADD_EXECUTABLE(solys-agent ${RACE_TARGET_AGENT_SRC})

TARGET_LINK_LIBRARIES(solys-agent	
														communicator
														config-provider
														plugin-provider
														message-recorder
														logger
														${PROTO_BUF_LIB}  ${POCO_LIB_NET} ${POCO_LIB_UTIL}  ${POCO_LIB_XML}  ${POCO_LIB_FOUNDATION} ${POCO_LIB_JASON}  ${POCO_LIB_UTIL}
														)

SET_TARGET_PROPERTIES(solys-agent PROPERTIES DEBUG_POSTFIX ${CMAKE_DEBUG_POSTFIX})



SET_TARGET_PROPERTIES(solys-agent PROPERTIES INSTALL_RPATH "${ORIGIN}")

# Visual Studio copy path fix			
IF(${TARGET_SYSTEM} STREQUAL "win32")

	SET(LIBRARY_OUTPUT_PATH "${LIBRARY_OUTPUT_PATH}/${BUILD_FOLDER_NAME}")
	SET_TARGET_PROPERTIES(solys-agent PROPERTIES LINK_FLAGS "/ENTRY:")
	TARGET_LINK_LIBRARIES(solys-agent ws2_32 iphlpapi)
	SET(POCO_SRC_FILES	${POCO_LIB_PATH}/${LINUX_LIB_PREFIX}PocoFoundation${STATIC_LIBRARY_EXTENSION}
					${POCO_BIN_PATH}/${LINUX_LIB_PREFIX}PocoFoundation${LIBRARY_EXTENSION}${POCO_SHARED_LIB_VERSION}
					${POCO_BIN_PATH}/${LINUX_LIB_PREFIX}PocoNet${LIBRARY_EXTENSION}${POCO_SHARED_LIB_VERSION}
					${POCO_LIB_PATH}/${LINUX_LIB_PREFIX}PocoUtil${STATIC_LIBRARY_EXTENSION}
					${POCO_BIN_PATH}/${LINUX_LIB_PREFIX}PocoUtil${LIBRARY_EXTENSION}
					${POCO_BIN_PATH}/${LINUX_LIB_PREFIX}PocoUtil${LIBRARY_EXTENSION}${POCO_SHARED_LIB_VERSION}
					${POCO_LIB_PATH}/${LINUX_LIB_PREFIX}PocoXML${STATIC_LIBRARY_EXTENSION}
					${POCO_BIN_PATH}/${LINUX_LIB_PREFIX}PocoXML${LIBRARY_EXTENSION}
					${POCO_BIN_PATH}/${LINUX_LIB_PREFIX}PocoXML${LIBRARY_EXTENSION}${POCO_SHARED_LIB_VERSION}
					)
	SET(PROTO_SRC_FILES	${PROTO_BUF_LIB_PATH}/${LINUX_LIB_PREFIX}protobuf${STATIC_LIBRARY_EXTENSION} 
						${PROTO_BUF_LIB_PATH}/${LINUX_LIB_PREFIX}protobuf${STATIC_LIBRARY_EXTENSION}${PROTO_BUF_SHARED_LIB_VERSION}
					)

ELSE()
	SET(POCO_SRC_FILES	
					${POCO_BIN_PATH}/${LINUX_LIB_PREFIX}PocoFoundation${LIBRARY_EXTENSION}${POCO_SHARED_LIB_VERSION}
					${POCO_BIN_PATH}/${LINUX_LIB_PREFIX}PocoNet${LIBRARY_EXTENSION}${POCO_SHARED_LIB_VERSION}
					${POCO_BIN_PATH}/${LINUX_LIB_PREFIX}PocoUtil${LIBRARY_EXTENSION}${POCO_SHARED_LIB_VERSION}
					${POCO_BIN_PATH}/${LINUX_LIB_PREFIX}PocoXML${LIBRARY_EXTENSION}${POCO_SHARED_LIB_VERSION}
					)

	SET(PROTO_SRC_FILES	
			${PROTO_BUF_LIB_PATH}/${LINUX_LIB_PREFIX}protobuf${LIBRARY_EXTENSION}${PROTO_BUF_SHARED_LIB_VERSION}
						)	


ENDIF()
					
SET(POCO_STATIC_LIB_FILES	${POCO_LIB_PATH}/${LINUX_LIB_PREFIX}PocoFoundation${STATIC_LIBRARY_EXTENSION}
					${POCO_LIB_PATH}/${LINUX_LIB_PREFIX}PocoNet${STATIC_LIBRARY_EXTENSION}
					${POCO_LIB_PATH}/${LINUX_LIB_PREFIX}PocoUtil${STATIC_LIBRARY_EXTENSION}
					${POCO_LIB_PATH}/${LINUX_LIB_PREFIX}PocoXML${STATIC_LIBRARY_EXTENSION}
					)


INSTALL(PROGRAMS  ${LIBRARY_OUTPUT_PATH}/solys-agent${DEBUG_POSTFIX}${EXE_EXTENTION} DESTINATION 
                   ${CMAKE_INSTALL_PREFIX} PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
                  
INSTALL(DIRECTORY  ${PROTO_INSTALL_PATH}lib/
DESTINATION ${CMAKE_INSTALL_PREFIX}
FILES_MATCHING PATTERN "*.so*"
)



